[package]
name = "async_futures_project"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await"] }
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"
