[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "async-nostd"
version = "0.2.0"
edition = "2024"

[dependencies]
async-syscall = { path = "crates/syscall" }
async-runtime = { path = "crates/runtime" }
async-executor = { path = "crates/executor" }
async-net = { path = "crates/net" }
async-http = { path = "crates/http" }
async-websocket = { path = "crates/websocket" }
async-utils = { path = "crates/utils" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
name = "async-nostd"
path = "src/main.rs"
